; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_trace_mach.c_fpm_trace_ready.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_trace_mach.c_fpm_trace_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@target = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@KERN_FAILURE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [82 x i8] c" It seems that master process does not have enough privileges to trace processes.\00", align 1
@ZLOG_ERROR = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [33 x i8] c"task_for_pid() failed: %s (%d)%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fpm_trace_ready(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %6 = call i32 (...) @mach_task_self()
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @task_for_pid(i32 %6, i32 %7, i32* @target)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @KERN_SUCCESS, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* @KERN_FAILURE, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i8* getelementptr inbounds ([82 x i8], [82 x i8]* @.str.1, i64 0, i64 0), i8** %5, align 8
  br label %17

17:                                               ; preds = %16, %12
  %18 = load i32, i32* @ZLOG_ERROR, align 4
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @mach_error_string(i64 %19)
  %21 = load i64, i64* %4, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @zlog(i32 %18, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0), i32 %20, i64 %21, i8* %22)
  store i32 -1, i32* %2, align 4
  br label %25

24:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %17
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i64 @task_for_pid(i32, i32, i32*) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i32 @zlog(i32, i8*, i32, i64, i8*) #1

declare dso_local i32 @mach_error_string(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
